# Kernel-Job-Agent

./: .gitignore  TESTING.md  alembic.ini  kernel.plan.md  todos.md
client/: package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/jobs/[id]/: page.tsx
client/app/jobs/[id]/artifacts/: page.tsx
client/app/jobs/new/: page.tsx
client/app/preferences/: page.tsx
client/app/upload/: page.tsx
client/components/ui/: index.tsx
client/lib/: api.ts
kernel-app/: kernel.json  package-lock.json  package.json  tsconfig.json
kernel-app/actions/: fill_job_form.ts
src/: alembic.ini  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 0001_initial.py
src/app/: config.py  db.py  main.py  models.py  schemas.py
src/app/routers/: jobs.py  preferences.py  resumes.py
src/app/services/: agent_graph.py  job_runner.py  kernel_client.py  resume_parser.py  storage_r2.py
